// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionBatching should render correctly when batching is enabled 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderBottomWidth": 1,
          },
          {
            "paddingTop": 0,
            "zIndex": 1,
          },
          {
            "backgroundColor": "#FFF9F6",
          },
          {
            "borderColor": "#FEEDE5",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "paddingBottom": 6,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 6,
            },
            {},
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexBasis": "0%",
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-Bold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 26,
                  },
                  {},
                  {
                    "color": "#2B1911",
                  },
                  {
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                ],
                false,
              ]
            }
          >
            transaction batching
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 10,
              "justifyContent": "flex-end",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          false,
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 8,
            },
            {},
            {
              "gap": 32,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 28,
                },
                false,
              ]
            }
          >
            Escrow payouts are delayed.
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 28,
                },
                false,
              ]
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    {
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 20,
                      "letterSpacing": 0.2,
                      "lineHeight": 28,
                    },
                    false,
                  ],
                  undefined,
                ]
              }
            >
              You 
            </Text>
            <Text
              style={
                [
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    {
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 20,
                      "letterSpacing": 0.2,
                      "lineHeight": 28,
                    },
                    false,
                  ],
                  {
                    "color": "#F56522",
                  },
                ]
              }
            >
              save up to 23%
            </Text>
            <Text
              style={
                [
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    {
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 20,
                      "letterSpacing": 0.2,
                      "lineHeight": 28,
                    },
                    false,
                  ],
                  undefined,
                ]
              }
            >
               in network fees
            </Text>
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 16,
                "marginTop": 16,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  {
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 20,
                    "height": 24,
                    "letterSpacing": 0.2,
                    "lineHeight": 28,
                  },
                  false,
                ]
              }
            >
              This only applies to:
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2B1911",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "gap": 4,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingBottom": 2,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 2,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.5,
                        "lineHeight": 24,
                        "textAlign": "center",
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "#2B1911",
                      },
                    ],
                    false,
                  ]
                }
              >
                bitcoin
              </Text>
              <test-file-stub
                fill="#2B1911"
                style={
                  [
                    {
                      "height": 12,
                      "width": 12,
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 16,
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 20,
                    "letterSpacing": 0.2,
                    "lineHeight": 32,
                    "textTransform": "lowercase",
                  },
                  undefined,
                ],
                false,
              ]
            }
          >
            transaction batching
          </Text>
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 32,
                  "width": 32,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionBatching should render correctly when loaded 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderBottomWidth": 1,
          },
          {
            "paddingTop": 0,
            "zIndex": 1,
          },
          {
            "backgroundColor": "#FFF9F6",
          },
          {
            "borderColor": "#FEEDE5",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "paddingBottom": 6,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 6,
            },
            {},
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexBasis": "0%",
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-Bold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 26,
                  },
                  {},
                  {
                    "color": "#2B1911",
                  },
                  {
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                ],
                false,
              ]
            }
          >
            transaction batching
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 10,
              "justifyContent": "flex-end",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          false,
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 8,
            },
            {},
            {
              "gap": 32,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 28,
                },
                false,
              ]
            }
          >
            Escrow payouts are done right away
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 28,
                },
                false,
              ]
            }
          >
            <Text
              style={
                [
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    {
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 20,
                      "letterSpacing": 0.2,
                      "lineHeight": 28,
                    },
                    false,
                  ],
                  undefined,
                ]
              }
            >
              You’re paying up to 
            </Text>
            <Text
              style={
                [
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    {
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 20,
                      "letterSpacing": 0.2,
                      "lineHeight": 28,
                    },
                    false,
                  ],
                  {
                    "color": "#F56522",
                  },
                ]
              }
            >
              30% more
            </Text>
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 16,
                "marginTop": 16,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  {
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 20,
                    "height": 24,
                    "letterSpacing": 0.2,
                    "lineHeight": 28,
                  },
                  false,
                ]
              }
            >
              This only applies to:
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2B1911",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "gap": 4,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingBottom": 2,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 2,
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    [
                      {
                        "fontFamily": "Baloo2-SemiBold",
                        "fontSize": 14,
                        "letterSpacing": 0.5,
                        "lineHeight": 24,
                        "textAlign": "center",
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "#2B1911",
                      },
                    ],
                    false,
                  ]
                }
              >
                bitcoin
              </Text>
              <test-file-stub
                fill="#2B1911"
                style={
                  [
                    {
                      "height": 12,
                      "width": 12,
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 16,
              "opacity": 1,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 20,
                    "letterSpacing": 0.2,
                    "lineHeight": 32,
                    "textTransform": "lowercase",
                  },
                  undefined,
                ],
                false,
              ]
            }
          >
            transaction batching
          </Text>
          <test-file-stub
            fill="#9F8C82"
            style={
              [
                {
                  "height": 32,
                  "width": 32,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionBatching should render correctly while loading 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    color="#F56522"
    size="large"
  />
</View>
`;
